--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=
 APP_ENV=development
-APP_KEY=base64:NUPekDH4/bAmxI2g2YOPgz2tg3mSa1YSIv472nUT8m8=
+APP_KEY=base64:mtoqz57DDXJ44PDmmNTSHoZ4IqSLoXuxDPlbjWaqICA=
 APP_DEBUG=true
-APP_URL=http://localhost/vics/public
+APP_URL=http://127.0.0.1:8000
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
